--- a/index.html
+++ b/index.html
@@ -10,11 +10,33 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+
   <!-- STYLES -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+  <main class="main-content">
+    <div class="container">
+
+      <div class="site-left">
+
+        <div class="site-left-wrapper">
+          <h2 class="site-left-heading">Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h2>
+          <button class="site-button">
+            <span class="button-items">
+              <img class="button-icon" src="img/icons/icon-star.svg" width="20" height="19" alt="icon-star">
+              <span class="button-text">top bloglar</span>
+            </span>
+          </button>
+        </div>
+
+      </div>
+
+    </div>
+
+  </main>
 
 </body>
 </html>
