--- a/index.html
+++ b/index.html
@@ -18,23 +18,96 @@
 <body>
 
   <main class="main-content">
+
+
     <div class="container">
 
-      <div class="site-left">
 
-        <div class="site-left-wrapper">
-          <h2 class="site-left-heading">Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h2>
-          <button class="site-button">
-            <span class="button-items">
-              <img class="button-icon" src="img/icons/icon-star.svg" width="20" height="19" alt="icon-star">
-              <span class="button-text">top bloglar</span>
-            </span>
-          </button>
+      <div class="site-wrapper">
+        <div class="site-left">
+          <div class="site-left-wrapper">
+            <h2 class="site-left-heading">Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h2>
+            <button class="site-button">
+              <span class="button-items">
+                <img class="button-icon" src="img/icons/icon-star.svg" width="20" height="19" alt="icon-star">
+                <span class="button-text">top bloglar</span>
+              </span>
+            </button>
+          </div>
         </div>
+        <div class="site-right">
+          <div class="right-heading-border">
+            <h3 class="site-right-heading">Eng so’nggi videolar</h3>
+          </div>
 
+          <ul class="site-right-list">
+
+
+            <!-- LIST  -->
+            <li class="site-right-list-item">
+              <img class="site-right-img" src="img/1.jpg" width="160" height="90" srcset="img/1.jpg 1x, img/1@2x.jpg 2x" alt="">
+              <div class="list-item-content">
+                <h3 class="site-right-list-heading"><a href="#" class="heading-link">O’rmonda uchburchaksimon uy qurdik</a></h3>
+                <span class="icons">
+                  <span class="icon-content icon-content-time">
+                    <img src="img/icons/icon-time.svg" alt="">
+                    <span class="icon-text icon-text-time">1 hafta oldin</span>
+                  </span>
+
+                  <span class="icons-content icon-content-eye">
+                    <img src="img/icons/icon-eye.svg" alt="">
+                    <span class="icon-text icon-text-eye">873 ming</span>
+                  </span>
+                </span>
+              </div>
+            </li>
+
+            <!-- LIST  -->
+            <li class="site-right-list-item">
+              <img class="site-right-img" src="img/2.jpg" width="160" height="90" srcset="img/2.jpg 1x, img/2@2x.jpg 2x" alt="">
+              <div class="list-item-content">
+                <h3 class="site-right-list-heading"><a href="#" class="heading-link">Sibirliklarning qoldirib ketilgan uychalari</a></h3>
+                <span class="icons">
+                  <span class="icon-content icon-content-time">
+                    <img src="img/icons/icon-time.svg" alt="">
+                    <span class="icon-text icon-text-time">3 hafta oldin</span>
+                  </span>
+
+                  <span class="icons-content icon-content-eye">
+                    <img src="img/icons/icon-eye.svg" alt="">
+                    <span class="icon-text icon-text-eye">819 ming</span>
+                  </span>
+                </span>
+              </div>
+            </li>
+
+            <!-- LIST  -->
+            <li class="site-right-list-item">
+              <img class="site-right-img" src="img/3.jpg" width="160" height="90" srcset="img/3.jpg 1x, img/3@2x.jpg 2x" alt="">
+              <div class="list-item-content">
+                <h3 class="site-right-list-heading"><a href="#" class="heading-link">Yer-uyida mallarang kuchugim bilan <br> tunab qoldik</a></h3>
+                <span class="icons">
+                  <span class="icon-content icon-content-time">
+                    <img src="img/icons/icon-time.svg" alt="">
+                    <span class="icon-text icon-text-time">1 oy oldin</span>
+                  </span>
+
+                  <span class="icons-content icon-content-eye">
+                    <img src="img/icons/icon-eye.svg" alt="">
+                    <span class="icon-text icon-text-eye">3.9 million</span>
+                  </span>
+                </span>
+              </div>
+            </li>
+
+          </ul>
+
+          <a class="upload-link" href="index.html">Yana yuklash</a>
+
+        </div>
       </div>
-
     </div>
+
 
   </main>
 
